--- a/index.html
+++ b/index.html
@@ -351,6 +351,7 @@
 
         <div class="toc" style="margin:10px 0 18px 0">
           <strong>Quick Links:</strong>
+          <a href="https://drive.google.com/drive/folders/1AWpKgeKhDConvmSkHzbefNHYWtPSeAJg?usp=sharing" target="_blank" rel="noopener">Portfolio Templates</a>
           <a href="#concepts">Conceptual Framework</a> ·
           <a href="#grasp">GRASP</a> ·
           <a href="#vocabulary">Vocabulary</a> ·
