--- a/index.html
+++ b/index.html
@@ -58,15 +58,18 @@
       font-size: 1.3em;
     }
     html, body { height:100%; }
-    body{
-      margin:0;
-      font-family: ui-sans-serif, system-ui, -apple-system, Segoe UI, Roboto, Inter, Arial;
-      color:var(--text);
-      background:
-        radial-gradient(1200px 800px at 10% -10%, rgba(167,139,250,.15), transparent 60%),
-        radial-gradient(900px 600px at 100% 0%, rgba(34,211,238,.12), transparent 60%),
-        var(--bg);
-    }
+body{
+  margin:0;
+  font-family: ui-sans-serif, system-ui, -apple-system, Segoe UI, Roboto, Inter, Arial;
+  color:var(--text);
+
+  /* single vertical gradient, no tiling */
+  background: linear-gradient(to bottom, #020617, #0b1120);
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: cover;
+}
+
     .container{ max-width:1100px; margin:0 auto; padding:24px; }
 
     /* Header / branding / menus */
