Change h2 color from LightCoral to Tomato

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
       color: MediumSeaGreen;
     }
         h2 {
-      color: LightCoral;
+      color: Tomato;
     }
     h5 {
       color: red;
