--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@ body{
             <div class="inner">
               <h3 style="margin:0 0 6px 0">Puzzle 1 — Hidden in plain sight</h3>
               <p class="muted">
-                Your first clue is found in the Google Doc titled "TASK SHEET - MYP4 Unit 2 - Bits & Bytes 3.0"
+                Your first clue is found in the Google Doc titled "TASK SHEET - MYP4 Design Unit 2 - Code 2 Escape"
               </p>
               <div class="input">
                 <input id="p1" type="text" placeholder="your answer (one word)" autocomplete="off" />
