--- a/index.html
+++ b/index.html
@@ -576,9 +576,13 @@ body{
   </p>
 <hr>
 <h2>Need more help with Criterion A?</h2>
-        <div class="toc" style="margin:10px 0 18px 0">
-          <a href="https://drive.google.com/drive/folders/1Cz-kR9sVVHV1MdIvK4w44SMnhrF41imw?usp=drive_link" target="_blank" rel="noopener">Here are detailed instructions and students examples for Criterion A.</a><br><br>
-        </div>
+<div class="toc" style="margin:10px 0 18px 0">
+  <strong>Portfolio Templates:</strong><br>
+  <a href="URL" target="_blank" rel="noopener">
+    Here are detailed instructions and student examples for Criterion A.
+  </a>
+</div>
+
           <hr>
 
   <p class="muted" style="margin-top:12px">
