Update link for Criterion A portfolio templates

--- a/index.html
+++ b/index.html
@@ -578,7 +578,7 @@ body{
 <h2>Need more help with Criterion A?</h2>
 <div class="toc" style="margin:10px 0 18px 0">
   <strong>Portfolio Templates:</strong><br>
-  <a href="URL" target="_blank" rel="noopener">
+  <a href="https://drive.google.com/drive/folders/1AWpKgeKhDConvmSkHzbefNHYWtPSeAJg?usp=sharing" target="_blank" rel="noopener">
     Here are detailed instructions and student examples for Criterion A.
   </a>
 </div>
