Add links and instructions for Criterion B and C

--- a/index.html
+++ b/index.html
@@ -720,8 +720,10 @@ body{
   </p>
 <hr>
 <h2>Need more help with Criterion B?</h2>
+  <div class="toc" style="margin:10px 0 18px 0">
 <a href="https://drive.google.com/drive/folders/1aJDwrjx16B0YfD_uxdStE631LfJtXool?usp=drive_link" target="_blank" rel="noopener">Here are detailed instructions and students examples for Criterion B.</a><br><br>
-<hr>
+  </div>
+    <hr>
 
   <p class="muted" style="margin-top:12px">
     See also:
@@ -857,8 +859,10 @@ body{
   <p><strong>Keep the focus on design logic and reasoning.</strong></p>
 <hr>
 <h2>Need more help with Criterion C?</h2>
+  <div class="toc" style="margin:10px 0 18px 0">
 <a href="https://drive.google.com/drive/folders/1KMGdUwnXwjeCVZdDq4pjkfdbnnO6jauw" target="_blank" rel="noopener">Here are detailed instructions and students examples for Criterion C.</a><br><br>
-<hr>
+  </div>
+    <hr>
 
   <p class="muted" style="margin-top:12px">
     See also:
