Refactor color styles to use CSS variables

--- a/index.html
+++ b/index.html
@@ -48,13 +48,13 @@
 }
 
     h3 {
-      color: MediumSeaGreen;
+      color: var(--accent-2);
     }
         h2 {
-      color: Tomato;
+      color: var(--err);
     }
     h5 {
-      color: red;
+      color: var(--ok);
       font-size: 1.3em;
     }
     html, body { height:100%; }
