--- a/index.html
+++ b/index.html
@@ -803,7 +803,7 @@ body{
 
   <p class="muted">
     <em>Portfolio note:</em> There is nothing extra you need to add to your portfolio
-    specifically for C2. Your evidence will come from your final product and the way you
+    specifically for C2. Your evidence will come from your demonstration of skills in class, your final product, and the way you
     describe and justify it in C3 and C4.
   </p>
 
