Update due date format in criterion sections

--- a/index.html
+++ b/index.html
@@ -486,7 +486,7 @@ body{
         <!-- Criterion pages (routed) -->
         <section id="pageA" class="hidden">
   <h2>Criterion A — Inquiring and Analysing</h2>
-<h5>Due Date: December XX, 21:00</h5>
+<h5>Due Date: Sunday, December XX, 21:00</h5>
 
   <!-- A2 -->
 
@@ -593,7 +593,7 @@ body{
 
 <section id="pageB" class="hidden">
   <h2>Criterion B — Developing Ideas</h2>
-<h5>Due Date: December XX, 21:00</h5>
+<h5>Due Date: Sunday, December XX, 21:00</h5>
 
   <!-- B1 -->
 
@@ -735,7 +735,7 @@ body{
 
 <section id="pageC" class="hidden">
   <h2>Criterion C — Creating the Solution</h2>
-<h5>Due Date: December XX, 21:00</h5>
+<h5>Due Date: Sunday, December XX, 21:00</h5>
 
 
   <!-- C1 -->
