--- a/index.html
+++ b/index.html
@@ -652,7 +652,7 @@ body{
 
   <p><strong>In your portfolio, include:</strong></p>
   <ul>
-    <li><strong>2–3 sketches or mockups</strong><br>
+    <li><strong>At least sketches or mockups</strong><br>
       These can be drawn by hand or digitally.<br>
       Show possible layouts (buttons, boxes, text areas, images, clues, etc.).
     </li>
