--- a/index.html
+++ b/index.html
@@ -654,6 +654,7 @@ body{
   <ul>
     <li><strong>At least sketches or mockups</strong><br>
       These can be drawn by hand or digitally.<br>
+      These can be rough and do not have to be clean and detailed, but they should clearly communicate your ideas.<br>
       Show possible layouts (buttons, boxes, text areas, images, clues, etc.).
     </li>
     <li><strong>A short description under each idea</strong><br>
