--- a/index.html
+++ b/index.html
@@ -798,7 +798,7 @@ body{
   </em>
 
   <p><strong>Task:</strong><br>
-    Turn your design into a working coded product using HTML, CSS, and JavaScript. Focus on
+    Collaborate with your partner and with Flint AI to turn your design into a working coded product using HTML, CSS, and JavaScript. Focus on
     writing clean, readable code and using your plan from C1 to guide your work.
   </p>
 
