Clarify portfolio submission instructions
Updated instructions for portfolio submission to specify GitHub Pages and added a link to a tutorial video.

--- a/index.html
+++ b/index.html
@@ -826,7 +826,11 @@ body{
   <ul>
     <li>
       <strong>Link to Your Final Web Page</strong><br>
-      Provide the URL to your working puzzle (Replit, Glitch, GitHub Pages, etc.).
+      Provide the URL to your working puzzle (GitHub Pages).<br>
+      Provide the URL to your <b>public</b> Github repository.
+        <div class="toc" style="margin:10px 0 18px 0">
+          <a href="google.com" target="_blank" rel="noopener"><i>This video shows you how.</i></a>
+        </div>
     </li>
     <li>
       <strong>Final Screenshots</strong><br>
