Update links and headings in index.html

--- a/index.html
+++ b/index.html
@@ -241,6 +241,7 @@ body{
           <details>
             <summary>Academic Honesty</summary>
             <ul>
+              
               <li><a href="https://docs.google.com/document/d/1K0q1vxMQFwqYiC5uF4AvcFR9QXKsGgPpb6Rhm82iGH8/edit?usp=sharing" target="_blank" rel="noopener">AI Assessment Scale</a></li>
               <li><a href="https://docs.google.com/document/d/1awPmS7EZNABzvbYUWx904atD9OMJn3mVZJoHzvQg65I/edit?tab=t.0#heading=h.202p3bftjid1" target="_blank" rel="noopener">ISL Academic Integrity Policy</a></li>
             </ul>
@@ -324,7 +325,7 @@ body{
               <h2>Status</h2>
               <p class="muted">✅ Unlocked on this browser</p>
               <hr style="border-color:rgba(148,163,184,.2)">
-              <h3 style="margin:14px 0 6px 0">At a glance</h3>
+              <h3 style="margin:14px 0 6px 0">Unit at a glance</h3>
               <ul class="muted" style="padding-left:18px">
                 <li>Focus: Intro to HTML/CSS/JS via digital escape room</li>
                 <li>Collaboration: Pairs build a room; class assembles one experience</li>
@@ -445,11 +446,16 @@ body{
           <article id="resources">
             <h3>Starter Code &amp; Resources</h3>
             <ul>
-              <li><strong>Starter template:</strong> <a href="#" id="starterLink">Starter Template</a> (downloads <code>index.html</code>)</li>
+              <div class="toc" style="margin:10px 0 18px 0">
+                <li><strong>Starter template:</strong> <a href="#" id="starterLink">Starter Template</a>
+              </div>
+                (downloads <code>index.html</code>)</li>
               <li><strong>Debugging:</strong>
-                <a href="https://developer.chrome.com/docs/devtools/" target="_blank" rel="noopener">Chrome DevTools</a> ·
-                <a href="https://firefox-source-docs.mozilla.org/devtools-user/" target="_blank" rel="noopener">Firefox DevTools</a> ·
-                <a href="https://developer.apple.com/safari/tools/" target="_blank" rel="noopener">Safari DevTools</a>
+                <div class="toc" style="margin:10px 0 18px 0">
+                  <a href="https://developer.chrome.com/docs/devtools/" target="_blank" rel="noopener">Chrome DevTools</a> ·
+                  <a href="https://firefox-source-docs.mozilla.org/devtools-user/" target="_blank" rel="noopener">Firefox DevTools</a> ·
+                  <a href="https://developer.apple.com/safari/tools/" target="_blank" rel="noopener">Safari DevTools</a>
+                </div>
               </li>
             </ul>
           </article>
@@ -586,8 +592,10 @@ body{
 
   <p class="muted" style="margin-top:12px">
     See also:
-    <a href="https://docs.google.com/document/d/1K0q1vxMQFwqYiC5uF4AvcFR9QXKsGgPpb6Rhm82iGH8/edit?usp=sharing" target="_blank" rel="noopener">AI Assessment Scale</a> ·
-    <a href="https://docs.google.com/document/d/1awPmS7EZNABzvbYUWx904atD9OMJn3mVZJoHzvQg65I/edit?tab=t.0#heading=h.202p3bftjid1" target="_blank" rel="noopener">ISL Academic Integrity Policy</a>
+    <div class="toc" style="margin:10px 0 18px 0">
+      <a href="https://docs.google.com/document/d/1K0q1vxMQFwqYiC5uF4AvcFR9QXKsGgPpb6Rhm82iGH8/edit?usp=sharing" target="_blank" rel="noopener">AI Assessment Scale</a> ·
+      <a href="https://docs.google.com/document/d/1awPmS7EZNABzvbYUWx904atD9OMJn3mVZJoHzvQg65I/edit?tab=t.0#heading=h.202p3bftjid1" target="_blank" rel="noopener">ISL Academic Integrity Policy</a>
+    </div>
   </p>
 </section>
 
