Refactor resource section for better structure

--- a/index.html
+++ b/index.html
@@ -446,17 +446,17 @@ body{
           <article id="resources">
             <h3>Starter Code &amp; Resources</h3>
             <ul>
-              <div class="toc" style="margin:10px 0 18px 0">
+              <span class="toc" style="margin-left:6px;">
                 <li><strong>Starter template:</strong> <a href="#" id="starterLink">Starter Template</a>
-              </div>
-                (downloads <code>index.html</code>)</li>
-              <li><strong>Debugging:</strong>
-                <div class="toc" style="margin:10px 0 18px 0">
-                  <a href="https://developer.chrome.com/docs/devtools/" target="_blank" rel="noopener">Chrome DevTools</a> ·
-                  <a href="https://firefox-source-docs.mozilla.org/devtools-user/" target="_blank" rel="noopener">Firefox DevTools</a> ·
-                  <a href="https://developer.apple.com/safari/tools/" target="_blank" rel="noopener">Safari DevTools</a>
-                </div>
-              </li>
+              </span> (downloads <code>index.html</code>)</li>
+            <li><strong>Debugging:</strong>
+              <span class="toc" style="margin-left:6px;">
+                <a href="https://developer.chrome.com/docs/devtools/" target="_blank" rel="noopener">Chrome DevTools</a> ·
+                <a href="https://firefox-source-docs.mozilla.org/devtools-user/" target="_blank" rel="noopener">Firefox DevTools</a> ·
+                <a href="https://developer.apple.com/safari/tools/" target="_blank" rel="noopener">Safari DevTools</a>
+              </span>
+            </li>
+
             </ul>
           </article>
 
