Replace div with span for table of contents

--- a/index.html
+++ b/index.html
@@ -592,10 +592,10 @@ body{
 
   <p class="muted" style="margin-top:12px">
     See also:
-    <div class="toc" style="margin:10px 0 18px 0">
+    <span class="toc" style="margin:10px 0 18px 0">
       <a href="https://docs.google.com/document/d/1K0q1vxMQFwqYiC5uF4AvcFR9QXKsGgPpb6Rhm82iGH8/edit?usp=sharing" target="_blank" rel="noopener">AI Assessment Scale</a> ·
       <a href="https://docs.google.com/document/d/1awPmS7EZNABzvbYUWx904atD9OMJn3mVZJoHzvQg65I/edit?tab=t.0#heading=h.202p3bftjid1" target="_blank" rel="noopener">ISL Academic Integrity Policy</a>
-    </div>
+    </span>
   </p>
 </section>
 
