--- a/index.html
+++ b/index.html
@@ -584,7 +584,7 @@ body{
 <h2>Need more help with Criterion A?</h2>
 <div class="toc" style="margin:10px 0 18px 0">
   <a href="https://drive.google.com/drive/folders/1AWpKgeKhDConvmSkHzbefNHYWtPSeAJg?usp=sharing" target="_blank" rel="noopener">
-    Here are detailed instructions and student examples for Criterion A.
+    Here are <u>detailed instructions</u> and <u>student examples</u> for Criterion A.
   </a>
 </div>
 
