--- a/index.html
+++ b/index.html
@@ -344,7 +344,10 @@ body{
                 Criterion A due in ManageBac — Sunday, January ??, 21:00<br><br>
                 Criterion B due in ManageBac — Sunday, January ??, 21:00<br><br>
                 Criterion C due in ManageBac — Sunday, January ??, 21:00<br><br>
-
+              <h2 style="color: var(--err)">Estimated Time</h2>
+                Criterion A 5 classes<br><br>
+                Criterion B 6 classes<br><br>
+                Criterion C 14 classes<br><br>
               </p>
             </div>
           </div>
