Update Flint AI link to direct URL

--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@ body{
             </ul>
           </details>
           <a href="#vocabulary">Vocabulary</a>
-          <a href="#flint">Flint AI</a>
+          <a href="https://app.flintk12.com/library/code-2-escape-a-60c8a2">Flint AI</a>
           <details>
             <summary>Academic Honesty</summary>
             <ul>
@@ -362,7 +362,7 @@ body{
           <a href="#concepts">Conceptual Framework</a> ·
           <a href="#grasp">GRASP</a> ·
           <a href="#vocabulary">Vocabulary</a> ·
-          <a href="#flint">Flint AI</a>
+          <a href="https://app.flintk12.com/library/code-2-escape-a-60c8a2">Flint AI</a>
         </div>
 
         <section id="homePage">
