--- a/index.html
+++ b/index.html
@@ -345,9 +345,9 @@ body{
                 Criterion B due in ManageBac — Sunday, January ??, 21:00<br><br>
                 Criterion C due in ManageBac — Sunday, January ??, 21:00<br><br>
               <h2 style="color: var(--err)">Estimated Time</h2>
-                Criterion A 5 classes<br><br>
-                Criterion B 6 classes<br><br>
-                Criterion C 14 classes<br><br>
+                <b>Criterion A</b> - 5 classes<br><br>
+                <b>Criterion B</b> - 6 classes<br><br>
+                <b>Criterion C</b> - 14 classes<br><br>
               </p>
             </div>
           </div>
