--- a/index.html
+++ b/index.html
@@ -344,7 +344,9 @@ body{
                 Criterion A due in ManageBac — Sunday, January ??, 21:00<br><br>
                 Criterion B due in ManageBac — Sunday, January ??, 21:00<br><br>
                 Criterion C due in ManageBac — Sunday, January ??, 21:00<br><br>
+              </p>
               <h2 style="color: var(--err)">Estimated Time</h2>
+              <p id="nextSummative" class="muted">
                 <b>Criterion A</b> - 5 classes<br><br>
                 <b>Criterion B</b> - 6 classes<br><br>
                 <b>Criterion C</b> - 14 classes<br><br>
