Improve readability of narrative in index.html
Formatted the narrative for better readability with line breaks.

--- a/index.html
+++ b/index.html
@@ -335,11 +335,16 @@ body{
                 <strong>Tip:</strong> Once unlocked, this device/browser remembers you.
                 Clearing site data or using Private/Incognito resets access.
               </p>
-              One perfectly normal morning, students arrive to find the school… different. The lights flicker with a soft hum, doors that normally open easily are sealed shut, familiar hallways twist into new paths, and digital screens around the campus display scrambled messages, countdown timers, and mysterious symbols.
-
-No one is in danger — but the entire school seems to have shifted into a puzzling, glitchy version of itself, almost like ISL has slipped into an alternate mode. Teachers and younger students are somewhere inside the building, safe but unable to navigate the new maze of locked rooms, coded panels, and hidden clues.
-
-A strange energy source appears to be pulsing from the center of the school — not harmful, but powerful — as if the building itself is running a massive puzzle that needs to be solved to reset everything back to normal.
+              One perfectly normal morning, students arrive to find the school… different. 
+              The lights flicker with a soft hum, doors that normally open easily are sealed shut, 
+              familiar hallways twist into new paths, and digital screens around the campus display scrambled messages, 
+              countdown timers, and mysterious symbols.<br><<br>
+              No one is in danger — but the entire school seems to have shifted into a puzzling, glitchy version of itself, 
+              almost like ISL has slipped into an alternate mode. 
+              Teachers and younger students are somewhere inside the building, 
+              safe but unable to navigate the new maze of locked rooms, coded panels, and hidden clues.<br><br>
+              A strange energy source appears to be pulsing from the center of the school — not harmful, but powerful — 
+              as if the building itself is running a massive puzzle that needs to be solved to reset everything back to normal.
             </div>
           </div>
           <div class="card">
