--- a/index.html
+++ b/index.html
@@ -322,10 +322,10 @@ body{
         <div class="grid-75-25" style="margin-bottom:16px;">
           <div class="card">
             <div class="inner">
-              <h2>Status</h2>
+              <h3>Status</h3>
               <p class="muted">✅ Unlocked on this browser</p>
               <hr style="border-color:rgba(148,163,184,.2)">
-              <h3 style="margin:14px 0 6px 0">Unit at a glance</h3>
+              <h2 style="margin:14px 0 6px 0">Unit at a glance</h2>
               <ul class="muted" style="padding-left:18px">
                 <li>Focus: Intro to HTML/CSS/JS via digital escape room</li>
                 <li>Collaboration: Pairs build a room; class assembles one experience</li>
@@ -335,6 +335,8 @@ body{
                 <strong>Tip:</strong> Once unlocked, this device/browser remembers you.
                 Clearing site data or using Private/Incognito resets access.
               </p>
+             <p style="font-size:16px; "> <b>Story: ISL Apocalypse</b> </p>
+              <br><br>
               One perfectly normal morning, students arrive to find the school… different. 
               The lights flicker with a soft hum, doors that normally open easily are sealed shut, 
               familiar hallways twist into new paths, and digital screens around the campus display scrambled messages, 
