--- a/index.html
+++ b/index.html
@@ -340,7 +340,7 @@ body{
               One perfectly normal morning, students arrive to find the school… different. 
               The lights flicker with a soft hum, doors that normally open easily are sealed shut, 
               familiar hallways twist into new paths, and digital screens around the campus display scrambled messages, 
-              countdown timers, and mysterious symbols.<br><<br>
+              countdown timers, and mysterious symbols.<br><br>
               No one is in danger — but the entire school seems to have shifted into a puzzling, glitchy version of itself, 
               almost like ISL has slipped into an alternate mode. 
               Teachers and younger students are somewhere inside the building, 
