--- a/index.html
+++ b/index.html
@@ -335,7 +335,7 @@ body{
                 <strong>Tip:</strong> Once unlocked, this device/browser remembers you.
                 Clearing site data or using Private/Incognito resets access.
               </p>
-             <p style="font-size:18px; "> <b>Story: ISL Apocalypse</b> </p>
+             <h3>Story: ISL Apocalypse</h3>
               <br>
               One perfectly normal morning, students arrive to find the school… different. 
               The lights flicker with a soft hum, doors that normally open easily are sealed shut, 
