--- a/index.html
+++ b/index.html
@@ -322,7 +322,7 @@ body{
         <div class="grid-75-25" style="margin-bottom:16px;">
           <div class="card">
             <div class="inner">
-              <h3>Status</h3>
+              <div class="kicker">Status</div>
               <p class="muted">✅ Unlocked on this browser</p>
               <hr style="border-color:rgba(148,163,184,.2)">
               <h2 style="margin:14px 0 6px 0">Unit at a glance</h2>
