--- a/index.html
+++ b/index.html
@@ -350,11 +350,9 @@ body{
           </div>
           <div class="card">
             <div class="inner">
-              <h2 style="color: var(--err)">Summative Dates</h2>
+              <h2 style="color: var(--err)">Summative Date</h2>
               <p id="nextSummative" class="muted">
-                Criterion A due in ManageBac — Sunday, January ??, 21:00<br><br>
-                Criterion B due in ManageBac — Sunday, January ??, 21:00<br><br>
-                Criterion C due in ManageBac — Sunday, January ??, 21:00<br><br>
+                Criterion A, B, & C due in ManageBac — Sunday, March ??, 21:00<br><br>
               </p>
               <h2 style="color: var(--err)">Estimated Time</h2>
               <p id="nextSummative" class="muted">
