Revise Flint AI guidance in index.html
Updated guidance on using Flint AI to clarify its role as a coding guide and emphasize user responsibility.

--- a/index.html
+++ b/index.html
@@ -462,7 +462,11 @@ body{
             <ul>
               <span class="toc" style="margin-left:6px;">
                 <li><strong>Starter template:</strong> <a href="#" id="starterLink">Starter Template</a>
-              </span> (downloads <code>index.html</code>)</li>
+                  </span> (downloads <code>index.html</code>)
+                </li>
+                <li><strong>Teacher example in Github:</strong> <a href="#" id="starterLink">Raw code in Github.</a>
+                  </span> (downloads <code>index.html</code>)
+                </li>
             <li><strong>Debugging:</strong>
               <span class="toc" style="margin-left:6px;">
                 <a href="https://developer.chrome.com/docs/devtools/" target="_blank" rel="noopener">Chrome DevTools</a> ·
@@ -498,7 +502,7 @@ body{
           <article id="flint">
             <h3>Flint AI</h3>
             <p class="muted">
-              Guidance on using Flint AI responsibly to scaffold code, debug, and reflect. (Content to be added.)
+              This AI Chatbot is trained to be your coding guide for this unit. You are in charge. Good questions get good answers. Flint <i>will not</i> write code for you. You must be a problem solver.
             </p>
           </article>
         </section>
