--- a/index.html
+++ b/index.html
@@ -369,6 +369,7 @@ body{
 
         <div class="toc" style="margin:10px 0 18px 0">
           <strong>Quick Links:</strong>
+          <a href="https://code.visualstudio.com/" target="_blank" rel="noopener">VS Code download</a> ·
           <a href="https://drive.google.com/drive/folders/1AWpKgeKhDConvmSkHzbefNHYWtPSeAJg?usp=sharing" target="_blank" rel="noopener">Portfolio Templates</a> ·
           <a href="#concepts">Conceptual Framework</a> ·
           <a href="#grasp">GRASP</a> ·
