Rearrange quick links in index.html

--- a/index.html
+++ b/index.html
@@ -369,12 +369,12 @@ body{
 
         <div class="toc" style="margin:10px 0 18px 0">
           <strong>Quick Links:</strong>
-          <a href="https://code.visualstudio.com/" target="_blank" rel="noopener">VS Code download</a> ·
-          <a href="https://drive.google.com/drive/folders/1AWpKgeKhDConvmSkHzbefNHYWtPSeAJg?usp=sharing" target="_blank" rel="noopener">Portfolio Templates</a> ·
           <a href="#concepts">Conceptual Framework</a> ·
           <a href="#grasp">GRASP</a> ·
           <a href="#vocabulary">Vocabulary</a> ·
-          <a href="https://app.flintk12.com/activities/digital-design--ab3fdb/sessions/new" target="_blank" rel="noopener">Flint AI</a>
+          <a href="https://app.flintk12.com/activities/digital-design--ab3fdb/sessions/new" target="_blank" rel="noopener">Flint AI</a> ·
+          <a href="https://code.visualstudio.com/" target="_blank" rel="noopener">VS Code download</a> ·
+          <a href="https://drive.google.com/drive/folders/1AWpKgeKhDConvmSkHzbefNHYWtPSeAJg?usp=sharing" target="_blank" rel="noopener">Portfolio Templates</a>
         </div>
 
         <section id="homePage">
