--- a/index.html
+++ b/index.html
@@ -374,7 +374,8 @@ body{
           <a href="#vocabulary">Vocabulary</a> ·
           <a href="https://app.flintk12.com/activities/digital-design--ab3fdb/sessions/new" target="_blank" rel="noopener">Flint AI</a> ·
           <a href="https://code.visualstudio.com/" target="_blank" rel="noopener">VS Code download</a> ·
-          <a href="https://drive.google.com/drive/folders/1AWpKgeKhDConvmSkHzbefNHYWtPSeAJg?usp=sharing" target="_blank" rel="noopener">Portfolio Templates</a>
+          <a href="https://drive.google.com/drive/folders/1AWpKgeKhDConvmSkHzbefNHYWtPSeAJg?usp=sharing" target="_blank" rel="noopener">Portfolio Templates</a><br><br>
+          <strong><a href="<a href="https://drive.google.com/drive/folders/1AWpKgeKhDConvmSkHzbefNHYWtPSeAJg?usp=sharing" target="_blank" rel="noopener">Daily Coding Exercises</a>" target="_blank" rel="noopener">Portfolio Templates</a></strong>
         </div>
 
         <section id="homePage">
