--- a/index.html
+++ b/index.html
@@ -370,7 +370,7 @@ body{
         <div class="toc" style="margin:10px 0 18px 0">
           <strong>Quick Links:</strong>
           <ul>
-            <li><strong><a href="https://drive.google.com/drive/folders/1AWpKgeKhDConvmSkHzbefNHYWtPSeAJg?usp=sharing" target="_blank" rel="noopener">Daily Coding Exercises</a></strong></li>
+            <li><strong><a href="https://docs.google.com/presentation/d/14cAviM0xdVDxOSQMRnEG8FMjnreaxVcr3jpThUfdboU/edit?usp=sharing" target="_blank" rel="noopener">Daily Coding Exercises</a></strong></li>
             <li><a href="#concepts">Conceptual Framework</a></li>
             <li><a href="#grasp">GRASP</a></li>
             <li><a href="#vocabulary">Vocabulary</a></li>
