--- a/index.html
+++ b/index.html
@@ -539,8 +539,8 @@ body{
     <p style="color:lemonchiffon;">A3: <b>analyse a range of</b> existing products that inspire a solution to the problem in detail</p>
   </em>
   <p><strong>Task:</strong><br>
-    Explore and analyze <span style="color:accent-2;><b><i>at least three (3)</b></i></span> existing digital escape rooms, puzzles, or interactive
-    games that use coding or design features similar to what you want to make.
+Explore and analyze
+<span style="color: var(--accent-2); font-weight: bold; font-style: italic; font-family: 'Georgia', serif;">at least three (3)</span>existing digital escape rooms, puzzles, or interactive games that use coding or design features similar to what you want to make.
   </p>
 
   <p><strong>In your portfolio:</strong></p>
