--- a/index.html
+++ b/index.html
@@ -540,7 +540,7 @@ body{
   </em>
   <p><strong>Task:</strong><br>
 Explore and analyze
-<span style="color: var(--accent-2); font-weight: bold; font-style: italic; font-family: 'Georgia', serif;">at least three (3)</span>existing digital escape rooms, puzzles, or interactive games that use coding or design features similar to what you want to make.
+<span style="color: var(--accent-2); font-weight: bold; font-style: italic;">at least three (3) </span>existing digital escape rooms, puzzles, or interactive games that use coding or design features similar to what you want to make.
   </p>
 
   <p><strong>In your portfolio:</strong></p>
