--- a/index.html
+++ b/index.html
@@ -355,10 +355,20 @@ body{
                 Criterion A, B, & C due in ManageBac — Sunday, March ??, 21:00<br><br>
               </p>
               <h2 style="color: var(--err)">Estimated Time</h2>
+              <h3>This are <i>suggested</i> due dates. Note the final due date above.</h3>
               <p id="nextSummative" class="muted">
                 <b>Criterion A</b> - 5 classes<br><br>
+                  <ul>A3: December 05</ul>
+                  <ul>A4: December 12</ul>
                 <b>Criterion B</b> - 6 classes<br><br>
+                  <ul>B1: ??</ul>
+                  <ul>B2: ??</ul>
+                  <ul>B3 & B4: ??</ul>
                 <b>Criterion C</b> - 14 classes<br><br>
+                  <ul>C1: ??</ul>
+                  <ul>C2: ??</ul>
+                  <ul>C3: ??</ul>
+                  <ul>C4: ??</ul>
               </p>
             </div>
           </div>
@@ -371,7 +381,6 @@ body{
           <strong>Quick Links:</strong>
           <ul>
             <li><strong><a href="https://docs.google.com/presentation/d/14cAviM0xdVDxOSQMRnEG8FMjnreaxVcr3jpThUfdboU/edit?usp=sharing" target="_blank" rel="noopener">Daily Coding Exercises</a></strong></li>
-            <li><a href="#concepts">Conceptual Framework</a></li>
             <li><a href="https://app.flintk12.com/activities/digital-design--ab3fdb/sessions/new" target="_blank" rel="noopener">Flint AI</a></li>
             <li><a href="https://code.visualstudio.com/" target="_blank" rel="noopener">VS Code download</a></li>
             <li><a href="https://drive.google.com/drive/folders/1AWpKgeKhDConvmSkHzbefNHYWtPSeAJg?usp=sharing" target="_blank" rel="noopener">Portfolio Templates</a></li>
