--- a/index.html
+++ b/index.html
@@ -521,7 +521,7 @@ body{
         <!-- Criterion pages (routed) -->
         <section id="pageA" class="hidden">
   <h2>Criterion A — Inquiring and Analysing</h2>
-<h5>Due Date: Sunday, December XX, 21:00</h5>
+<h5>Due Date: One due date for the entire unit.<br>All strands due Sunday, March ??, 21:00</h5>
 
   <!-- A2 -->
 
@@ -630,7 +630,7 @@ Explore and analyze
 
 <section id="pageB" class="hidden">
   <h2>Criterion B — Developing Ideas</h2>
-<h5>Due Date: Sunday, December XX, 21:00</h5>
+<h5>Due Date: One due date for the entire unit.<br>All strands due Sunday, March ??, 21:00</h5>
 
   <!-- B1 -->
 
@@ -773,7 +773,7 @@ Explore and analyze
 
 <section id="pageC" class="hidden">
   <h2>Criterion C — Creating the Solution</h2>
-<h5>Due Date: Sunday, December XX, 21:00</h5>
+<h5>Due Date: One due date for the entire unit.<br>All strands due Sunday, March ??, 21:00</h5>
 
 
   <!-- C1 -->
