--- a/index.html
+++ b/index.html
@@ -356,20 +356,18 @@ body{
               </p>
               <h2 style="color: var(--err)">Estimated Time</h2>
               <h3>This are <i>suggested</i> due dates. Note the final due date above.</h3>
-              <p id="nextSummative" class="muted">
-                <b>Criterion A</b> - 5 classes<br><br>
+                <b>Criterion A</b> - 5 classes<br>
                   <ul>A3: December 05</ul>
                   <ul>A4: December 12</ul>
-                <b>Criterion B</b> - 6 classes<br><br>
+                <b>Criterion B</b> - 6 classes<br>
                   <ul>B1: ??</ul>
                   <ul>B2: ??</ul>
                   <ul>B3 & B4: ??</ul>
-                <b>Criterion C</b> - 14 classes<br><br>
+                <b>Criterion C</b> - 14 classes<br>
                   <ul>C1: ??</ul>
                   <ul>C2: ??</ul>
                   <ul>C3: ??</ul>
                   <ul>C4: ??</ul>
-              </p>
             </div>
           </div>
         </div>
