--- a/index.html
+++ b/index.html
@@ -519,7 +519,7 @@ body{
         <!-- Criterion pages (routed) -->
         <section id="pageA" class="hidden">
   <h2>Criterion A — Inquiring and Analysing</h2>
-<h5>Due Date: One due date for the entire unit.<br>All strands due Sunday, March ??, 21:00</h5>
+<h5>Due Date: <span style="color: white;">One due date for the entire unit.</span><br>All strands due Sunday, March ??, 21:00</h5>
 
   <!-- A2 -->
 
@@ -628,7 +628,7 @@ Explore and analyze
 
 <section id="pageB" class="hidden">
   <h2>Criterion B — Developing Ideas</h2>
-<h5>Due Date: One due date for the entire unit.<br>All strands due Sunday, March ??, 21:00</h5>
+<h5>Due Date: <span style="color: white;">One due date for the entire unit.</span><br>All strands due Sunday, March ??, 21:00</h5>
 
   <!-- B1 -->
 
@@ -771,7 +771,7 @@ Explore and analyze
 
 <section id="pageC" class="hidden">
   <h2>Criterion C — Creating the Solution</h2>
-<h5>Due Date: One due date for the entire unit.<br>All strands due Sunday, March ??, 21:00</h5>
+<h5>Due Date: <span style="color: white;">One due date for the entire unit.</span><br>All strands due Sunday, March ??, 21:00</h5>
 
 
   <!-- C1 -->
