--- a/index.html
+++ b/index.html
@@ -352,7 +352,7 @@ body{
             <div class="inner">
               <h2 style="color: var(--err)">Summative Date</h2>
               <p id="nextSummative" class="muted">
-                Criterion A, B, & C due in ManageBac — Sunday, March ??, 21:00<br><br>
+                Criterion A, B, & C due in ManageBac — Sunday, March ??, 21:00<br>
               </p>
               <h2 style="color: var(--err)">Estimated Time</h2>
               <h3>This are <i>suggested</i> due dates. Note the final due date above.</h3>
