--- a/index.html
+++ b/index.html
@@ -378,7 +378,7 @@ body{
         <div class="toc" style="margin:10px 0 18px 0">
           <strong>Quick Links:</strong>
           <ul>
-            <li><strong><a href="https://docs.google.com/presentation/d/14cAviM0xdVDxOSQMRnEG8FMjnreaxVcr3jpThUfdboU/edit?usp=sharing" target="_blank" rel="noopener">Daily Coding Exercises</a></strong></li>
+            <li><strong><a href="https://docs.google.com/presentation/d/14cAviM0xdVDxOSQMRnEG8FMjnreaxVcr3jpThUfdboU/present?slide=id.g3a9f75382b0_0_0" target="_blank" rel="noopener">Daily Coding Exercises</a></strong></li>
             <li><a href="https://app.flintk12.com/activities/digital-design--ab3fdb/sessions/new" target="_blank" rel="noopener">Flint AI</a></li>
             <li><a href="https://code.visualstudio.com/" target="_blank" rel="noopener">VS Code download</a></li>
             <li><a href="https://drive.google.com/drive/folders/1AWpKgeKhDConvmSkHzbefNHYWtPSeAJg?usp=sharing" target="_blank" rel="noopener">Portfolio Templates</a></li>
