--- a/index.html
+++ b/index.html
@@ -580,9 +580,9 @@ Explore and analyze
   <p><strong>In your portfolio, include the following:</strong></p>
   <ul>
     <li><strong>The Problem / Story Context</strong><br>
-      Summarize the ISL Apocalypse scenario in your own words.<br>
-      Explain what systems have failed and why digital solutions are needed.<br>
-      Describe why an escape room with puzzles is being used as the recovery system.
+      Summarize the information presented in the <b>Overview</b> section of this page (conceptual framework & GRASP table).<br>
+      Describe what a digital escape room is.<br>
+      Describe why a Digital Escape room might be an appropriate student contribution to ISL's annual Bits and Bytes event.
     </li>
 
     <li><strong>Your General Goal as a Designer</strong><br>
