--- a/index.html
+++ b/index.html
@@ -582,7 +582,7 @@ Explore and analyze
     <li><strong>The Problem / Story Context</strong><br>
       Summarize the information presented in the <b>Overview</b> section of this page (conceptual framework & GRASP table).<br>
       Describe what a digital escape room is.<br>
-      Describe why a Digital Escape room might be an appropriate student contribution to ISL's annual <a href="https://docs.google.com/document/d/1pkCWhCbznf8grUXfpbIdRl7z142Zz7Y3gI99qHiWd6o/edit?tab=t.0" target="_blank" rel="noopener">"Bits and Bytes event</a>.
+      Describe why a Digital Escape room might be an appropriate student contribution to ISL's annual <a href="https://docs.google.com/document/d/1pkCWhCbznf8grUXfpbIdRl7z142Zz7Y3gI99qHiWd6o/edit?tab=t.0" target="_blank" rel="noopener">Bits & Bytes event</a>.
     </li>
 
     <li><strong>Your General Goal as a Designer</strong><br>
