--- a/index.html
+++ b/index.html
@@ -610,7 +610,7 @@ Explore and analyze
 <hr>
 <h2>Need more help with Criterion A?</h2>
 <div class="toc" style="margin:10px 0 18px 0">
-  <a href="https://drive.google.com/drive/folders/1AWpKgeKhDConvmSkHzbefNHYWtPSeAJg?usp=sharing" target="_blank" rel="noopener">
+  <a href="https://drive.google.com/drive/folders/1Cz-kR9sVVHV1MdIvK4w44SMnhrF41imw" target="_blank" rel="noopener">
     Here are <u>detailed instructions</u> and <u>student examples</u> for Criterion A.
   </a>
 </div>
