--- a/index.html
+++ b/index.html
@@ -661,7 +661,8 @@ Explore and analyze
     </li>
     <li><strong>Usability / user experience requirements</strong><br>
       What should players be able to understand easily?<br>
-      How should your instructions or feedback appear?
+      How should your instructions or feedback appear?<br>
+      <b>Teacher-provided <u>required</u> specification:</b> "The puzzle must be solvable in 60 seconds or less, excluding any time spent reading the instructions or thinking/planning before starting."
     </li>
     <li><strong>Aesthetic requirements</strong><br>
       What style, visuals, or layout expectations do you already have?
@@ -669,7 +670,6 @@ Explore and analyze
     <li><strong>Story and theme requirements</strong><br>
       What is the opening and closing script that was assigned to you?<br>
       How will your puzzle fit the ISL Apocalypse narrative?<br>
-      What “system” might it eventually help restore?
     </li>
   </ul>
 
