--- a/index.html
+++ b/index.html
@@ -958,7 +958,7 @@ Explore and analyze
     C2date: '??',
     C3date: '??',
     C4date: '??',
-    finalDueDate: 'Sunday, March ??, 21:00'
+    finalDueDate: 'Sunday, March 22, 21:00'
   };
 
   function applyDueDates(){
