--- a/index.html
+++ b/index.html
@@ -475,8 +475,8 @@ body{
                 <li><strong>Starter template:</strong> <a href="#" id="starterLink">Starter Template</a>
                   </span> (downloads <code>index.html</code>)
                 </li>
-                <li><strong>Teacher example in Github:</strong> <a href="#" id="starterLink">Raw code in Github.</a>
-                  </span> (downloads <code>index.html</code>)
+                <li>
+                  <strong>Teacher example in Github:</strong> <a href="https://github.com/LeeShawverISL/code2escape/blob/main/index.html" id="starterLink">Raw code in Github.</a>
                 </li>
             <li><strong>Debugging:</strong>
               <span class="toc" style="margin-left:6px;">
