--- a/index.html
+++ b/index.html
@@ -472,11 +472,11 @@ body{
             <h3>Starter Code &amp; Resources</h3>
             <ul>
               <span class="toc" style="margin-left:6px;">
-                <li><strong>Starter template:</strong> <a href="#" id="starterLink">Starter Template</a>
+                <li><strong>Starter template:</strong> <a href="https://drive.google.com/drive/folders/1AWpKgeKhDConvmSkHzbefNHYWtPSeAJg?usp=drive_link" id="starterLink"  target="_blank" rel="noopener">Starter Template</a>
                   </span> (downloads <code>index.html</code>)
                 </li>
                 <li>
-                  <strong>Teacher example in Github:</strong> <a href="https://github.com/LeeShawverISL/code2escape/blob/main/index.html" id="starterLink">Raw code in Github.</a>
+                  <strong>Teacher example in Github:</strong> <a href="https://github.com/LeeShawverISL/code2escape/blob/main/index.html" id="Teacher code link"  target="_blank" rel="noopener">Raw code in Github</a>
                 </li>
             <li><strong>Debugging:</strong>
               <span class="toc" style="margin-left:6px;">
