--- a/index.html
+++ b/index.html
@@ -472,8 +472,9 @@ body{
             <h3>Starter Code &amp; Resources</h3>
             <ul>
               <span class="toc" style="margin-left:6px;">
-                <li><strong>Starter template:</strong> <a href="https://drive.google.com/drive/folders/1AWpKgeKhDConvmSkHzbefNHYWtPSeAJg?usp=drive_link" id="starterLink"  target="_blank" rel="noopener">Starter Template</a>
-                  </span> (downloads <code>index.html</code>)
+                <li><strong>Starter templates:</strong><br>
+                  <a href=https://leeshawverisl.github.io/code2escape_project_template_basic/" id="starterLink"  target="_blank" rel="noopener">Basic Template</a>
+                  <a href=https://leeshawverisl.github.io/escape2code_project_template_plus/" id="starterLink"  target="_blank" rel="noopener">Flashy Template</a>
                 </li>
                 <li>
                   <strong>Teacher example in Github:</strong> <a href="https://github.com/LeeShawverISL/code2escape/blob/main/index.html" id="Teacher code link"  target="_blank" rel="noopener">Raw code in Github</a>
