--- a/index.html
+++ b/index.html
@@ -473,11 +473,17 @@ body{
             <ul>
               <span class="toc" style="margin-left:6px;">
                 <li><strong>Starter templates:</strong><br>
-                  <a href=https://leeshawverisl.github.io/code2escape_project_template_basic/" id="starterLink"  target="_blank" rel="noopener">Basic Template</a>
-                  <a href=https://leeshawverisl.github.io/escape2code_project_template_plus/" id="starterLink"  target="_blank" rel="noopener">Flashy Template</a>
+                  <a href="https://leeshawverisl.github.io/code2escape_project_template_basic/" id="starterLink"  target="_blank" rel="noopener">Basic Template</a>
+                  <ul>
+                  <li><a href="https://github.com/LeeShawverISL/escape2code_project_template_plus/blob/main/index.html" id="starterLink"  target="_blank" rel="noopener">Raw Code</a></li>
+                  </ul>
+                    <a href="https://leeshawverisl.github.io/escape2code_project_template_plus/" id="starterLink"  target="_blank" rel="noopener">Flashy Template</a>
+                  <ul>
+                    <li><a href="https://github.com/LeeShawverISL/code2escape_project_template_basic/blob/main/index.html" id="starterLink"  target="_blank" rel="noopener">Raw Code</a></li>
+                  </ul>     
                 </li>
                 <li>
-                  <strong>Teacher example in Github:</strong> <a href="https://github.com/LeeShawverISL/code2escape/blob/main/index.html" id="Teacher code link"  target="_blank" rel="noopener">Raw code in Github</a>
+                  <strong>Teacher example in Github:</strong> <a href="https://github.com/LeeShawverISL/code2escape/blob/main/index.html" id="Task Sheet Code"  target="_blank" rel="noopener">Raw code in Github</a>
                 </li>
             <li><strong>Debugging:</strong>
               <span class="toc" style="margin-left:6px;">
