--- a/index.html
+++ b/index.html
@@ -470,7 +470,7 @@ body{
 
           <article id="resources">
             <h3>Starter Code &amp; Resources</h3>
-            <ul>
+            <ul style="margin-left: 20px;">
               <span class="toc" style="margin-left:6px;">
                 <li><strong>Starter templates:</strong><br>
                   <a href="https://leeshawverisl.github.io/code2escape_project_template_basic/" id="starterLink"  target="_blank" rel="noopener">Basic Template</a>
